give-give-frontend/styles/toy_form.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

@font-face {
    font-family: 'game-boy';
    src: url("../resources/Fonts/Early\ GameBoy.ttf") format('truetype');
}


body {
    font-family:'game-boy';
    background-color: honeydew;
    background-image:url("../resources/img/gradient_without_point.png") ;
    background-size: auto;
    
}

#popup-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#toy-form {
    background-color: #fff;
    padding: 1.5rem;
    width: 20rem;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
}

#toy-form h2 {
    text-align: center;
    margin-bottom: 1rem;
}

#toy-form label {
    margin: 10px 0 5px;
}

#toy-form input, select {
    width: 100%;
    padding: 0.3rem;
    margin-bottom: 0.5rem;
}

#submit-toy  {
  align-items: center;
  background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
  border: 0;
  border-radius: 10px;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  font-size: 16px;
  font-weight: 700;
  height: 54px;
  justify-content: center;
  letter-spacing: .4px;
  line-height: 1;
  max-width: 100%;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 3px;
  text-decoration: none;
  text-transform: uppercase;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  margin-top: 1rem;
}

#submit-toy :active {
  outline: 0;
  transform: scale(0.95);
}

#submit-toy:hover {
  outline: 0;
  background-image: linear-gradient(135deg, #3b8d99 40%, #6bdfd1);
  transition: 1s ease;
}

#remove-button {
    position: relative;
    left: 16rem;
    width: 1.5rem;
    height: 1.5rem;
    display: flex;
    color: white;
    background-color: #f34079;
    border-radius: 50%;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-bottom: 1rem;
    gap: 0.5rem;
}


input #remove-button {
    position: relative;
    right:0;
}

#remove-button:hover {
    background-color: #fc894d;
}

